--- a/Raspberry_V1/pin_mapping.json
+++ b/Raspberry_V1/pin_mapping.json
@@ -1,8 +1,8 @@
 {
   "formulas": {
-    "red": 18,
-    "blue": 19,
     "yellow": 20,
-    "green": 21
+    "green": 21,
+    "red": 18,
+    "blue": 19
   }
 }
